--- a/GPUImageFilters_2_15/Base.lproj/Main.storyboard
+++ b/GPUImageFilters_2_15/Base.lproj/Main.storyboard
@@ -16,15 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="QFH-6V-sPc">
-                                <rect key="frame" x="312" y="20" width="49" height="31"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="47" id="0EA-A8-Evd"/>
-                                    <constraint firstAttribute="height" constant="31" id="y3G-1I-gW3"/>
-                                </constraints>
-                            </switch>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="AkM-OZ-s6u">
-                                <rect key="frame" x="153.5" y="626" width="68" height="30"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="AkM-OZ-s6u">
+                                <rect key="frame" x="128" y="626" width="119" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wsl-BV-F9w">
                                         <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
@@ -34,21 +27,31 @@
                                         </constraints>
                                         <color key="tintColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" image="play.fill" catalog="system">
-                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="32"/>
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="30"/>
                                         </state>
                                         <connections>
                                             <action selector="playVideo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hX5-W2-vlp"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iwn-aY-ax4">
+                                        <rect key="frame" x="47" y="0.0" width="25" height="30"/>
+                                        <color key="tintColor" red="1" green="0.83600288629999997" blue="0.15848392250000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" image="pause.fill" catalog="system">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="30"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="pauseVideo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="off-eo-Xiu"/>
+                                        </connections>
+                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LCj-Ff-B3J">
-                                        <rect key="frame" x="38" y="0.0" width="30" height="30"/>
+                                        <rect key="frame" x="89" y="0.0" width="30" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="30" id="52u-ON-Xte"/>
                                             <constraint firstAttribute="height" constant="30" id="NNN-HZ-P1i"/>
                                         </constraints>
-                                        <color key="tintColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="tintColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" image="plus.circle.fill" catalog="system">
-                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="32"/>
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="30"/>
                                         </state>
                                         <connections>
                                             <action selector="addMedia:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HBM-aj-91T"/>
@@ -57,10 +60,10 @@
                                 </subviews>
                             </stackView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Hh7-yk-EbT">
-                                <rect key="frame" x="8" y="276" width="359" height="115"/>
+                                <rect key="frame" x="8" y="528" width="359" height="84"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="Hh7-yk-EbT" secondAttribute="height" multiplier="359:115" id="ShN-Ry-DOI"/>
+                                    <constraint firstAttribute="width" secondItem="Hh7-yk-EbT" secondAttribute="height" multiplier="359:84" id="iez-7g-a6j"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hCC-fw-Wla">
                                     <size key="itemSize" width="128" height="128"/>
@@ -70,7 +73,7 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FiltersCell" id="ohp-lF-a9O" customClass="FiltersCollectionViewCell" customModule="GPUImageFilters_2_15" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="-6.5" width="128" height="128"/>
+                                        <rect key="frame" x="0.0" y="-22" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="2b9-Bk-Qeq">
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
@@ -79,8 +82,8 @@
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="so9-4X-kXd">
                                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="128" id="2fk-Ad-Mb7"/>
-                                                        <constraint firstAttribute="width" constant="128" id="ZNP-Yp-jwU"/>
+                                                        <constraint firstAttribute="width" constant="128" id="jVs-e2-HfD"/>
+                                                        <constraint firstAttribute="height" constant="128" id="yPZ-Lc-U5C"/>
                                                     </constraints>
                                                 </imageView>
                                             </subviews>
@@ -101,22 +104,36 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="nOR-qL-QfO"/>
                                 </connections>
                             </collectionView>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="QFH-6V-sPc">
+                                <rect key="frame" x="312" y="626" width="49" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="47" id="0EA-A8-Evd"/>
+                                    <constraint firstAttribute="height" constant="31" id="y3G-1I-gW3"/>
+                                </constraints>
+                            </switch>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UDp-fQ-NAQ">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="520"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="Hh7-yk-EbT" firstAttribute="top" secondItem="UDp-fQ-NAQ" secondAttribute="bottom" constant="8" id="1J2-je-VZn"/>
                             <constraint firstItem="AkM-OZ-s6u" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3To-4I-Em0"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QFH-6V-sPc" secondAttribute="trailing" constant="16" id="Dto-xb-UyN"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Hh7-yk-EbT" secondAttribute="trailing" constant="8" id="MLS-9H-V71"/>
-                            <constraint firstItem="Hh7-yk-EbT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="nRW-Ju-igj"/>
-                            <constraint firstItem="Hh7-yk-EbT" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="qld-oh-ySn"/>
-                            <constraint firstItem="Hh7-yk-EbT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qnA-8Z-Pod"/>
+                            <constraint firstItem="Hh7-yk-EbT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="7fr-Ux-gh3"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QFH-6V-sPc" secondAttribute="trailing" constant="16" id="8v0-00-3Ed"/>
+                            <constraint firstItem="UDp-fQ-NAQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Na8-zF-FHs"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Hh7-yk-EbT" secondAttribute="trailing" constant="8" id="PJY-BA-gky"/>
+                            <constraint firstItem="UDp-fQ-NAQ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="S1L-es-57b"/>
+                            <constraint firstItem="AkM-OZ-s6u" firstAttribute="top" secondItem="Hh7-yk-EbT" secondAttribute="bottom" constant="14" id="gmP-Sc-8Wg"/>
+                            <constraint firstItem="UDp-fQ-NAQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lcz-sz-Krf"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="AkM-OZ-s6u" secondAttribute="bottom" constant="11" id="tds-IW-5Rn"/>
-                            <constraint firstItem="QFH-6V-sPc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="tiD-M4-PC9"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="QFH-6V-sPc" secondAttribute="bottom" constant="10" id="wCu-oB-iuM"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="mediaSwitcher" destination="QFH-6V-sPc" id="A3b-L9-bfe"/>
+                        <outlet property="mediaView" destination="UDp-fQ-NAQ" id="FTC-3e-zjX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -125,6 +142,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="pause.fill" catalog="system" width="116" height="128"/>
         <image name="play.fill" catalog="system" width="116" height="128"/>
         <image name="plus.circle.fill" catalog="system" width="128" height="121"/>
     </resources>
